Made it responsive and added a mixin and fixed scrollbars

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9030,7 +9030,7 @@ body {
   animation-name: rollOut; }
 
 body {
-  background-color: #E5E8EAFF;
+  background-color: #DBD9D9;
   font-size: 14px;
   line-height: 1.6;
   font-family: 'Fira Sans', sans-serif;
@@ -9038,17 +9038,19 @@ body {
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%; }
 
-.fixedBack {
-  position: fixed;
-  width: 100%; }
-  .fixedBack#backTop {
-    background-color: white;
-    height: 240px;
-    box-shadow: 0px 0px 300px -56px rgba(0, 0, 0, 0.25); }
-  .fixedBack#backBottom {
-    background-color: #DBD9D9;
-    z-index: -1;
-    height: 100%; }
+::-webkit-scrollbar {
+  width: 0.5em;
+  height: 0.5em; }
+
+::-webkit-scrollbar-thumb {
+  background: grey; }
+
+::-webkit-scrollbar-track {
+  background: white; }
+
+body {
+  scrollbar-face-color: grey;
+  scrollbar-track-color: white; }
 
 ::selection {
   background: #84859A; }
@@ -9156,7 +9158,10 @@ input[type="button"] {
     outline: 0; }
 
 #mainNav {
-  clear: both; }
+  clear: both;
+  min-height: 150px;
+  max-height: 250px;
+  background-color: white; }
   #mainNav div a.navbar-brand {
     background-color: #3F8654;
     margin: 30px 0 0 30px;
@@ -9167,6 +9172,11 @@ input[type="button"] {
     clear: both;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out; }
+    @media (max-width: 375px) {
+      #mainNav div a.navbar-brand {
+        -webkit-transform: scale(0.8);
+        transform: scale(0.8);
+        margin-left: 10px; } }
     #mainNav div a.navbar-brand span.fa {
       background-color: white;
       font-size: 20px;
@@ -9188,8 +9198,14 @@ input[type="button"] {
     margin-top: 20px;
     margin-right: 30px;
     float: right; }
+    @media (max-width: 375px) {
+      #mainNav div ul {
+        margin-right: 10px; } }
     #mainNav div ul li {
       margin: 20px; }
+      @media (max-width: 767px) {
+        #mainNav div ul li {
+          margin: 20px 10px; } }
       #mainNav div ul li a {
         line-height: 0.5;
         color: #3F8654;
@@ -9220,8 +9236,15 @@ input[type="button"] {
   top: 0px;
   width: 300px;
   height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
   color: #d8ecde;
-  margin-top: 240px; }
+  padding-top: 150px;
+  overflow-y: auto; }
+  @media (max-width: 767px) {
+    .nav-side-menu {
+      margin-top: 235px;
+      height: 100%; } }
 
 .nav-side-menu .brand {
   background-color: #23282e;
