--- a/assets/sass/2-basics/_body-element.sass
+++ b/assets/sass/2-basics/_body-element.sass
@@ -1,5 +1,5 @@
 body
-  background-color: #E5E8EAFF
+  background-color: $secondary
   font-size: 14px
   line-height: 1.6
   font-family: 'Fira Sans', sans-serif
@@ -7,16 +7,23 @@ body
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: 100%
 
-.fixedBack
-	position: fixed
-	width: 100%
-	&#backTop
-		background-color: white
-		height: 240px
-		box-shadow: 0px 0px 300px -56px rgba(0,0,0,0.25)
-	&#backBottom
-		background-color: $secondary
-		z-index: -1
-		//margin-top: 25vh
-		height: 100%
-	&#backSide
+
+@include scrollbars(.5em, grey ,white);
+
+
+// .fixedBack
+// 	position: fixed
+// 	width: 100%
+// 	top: 0
+// 	&#backTop
+// 		background-color: white
+// 		height: 150px
+// 		box-shadow: 0px 0px 300px -56px rgba(0,0,0,0.25)
+// 		@media (min-width: 603px)
+// 			height: 200px
+// 	&#backBottom
+// 		background-color: $secondary
+// 		z-index: -1
+// 		//margin-top: 25vh
+// 		height: 100%
+// 	&#backSide
