--- a/assets/sass/3-modules/_navbar.sass
+++ b/assets/sass/3-modules/_navbar.sass
@@ -2,9 +2,12 @@
 
 #mainNav
 	clear: both
+	min-height: 150px
+	max-height: 250px
+	background-color: white
 	div
 		//background: $black
-		
+
 		a.navbar-brand
 			background-color: $primary
 			margin: 30px 0 0 30px
@@ -14,6 +17,9 @@
 			box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.15) 
 			clear: both
 			transition: all 0.3s ease-in-out
+			@media (max-width: 375px)
+				transform: scale(0.8);
+				margin-left: 10px
 			span.fa
 				background-color: white
 				font-size: 20px
@@ -40,9 +46,17 @@
 			margin-top: 20px
 			margin-right: 30px
 			float: right
+			@media (max-width: 375px)
+				//transform: scale(0.8);
+				margin-right: 10px
+				//margin-top: 5px
 			li
 
 				margin: 20px
+				@media (max-width: 767px)
+					margin: 20px 10px
+				
+
 				
 				a
 					line-height: 0.5
