--- a/assets/sass/3-modules/_sidebar.scss
+++ b/assets/sass/3-modules/_sidebar.scss
@@ -8,8 +8,15 @@
   top: 0px;
   width: 300px;
   height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
   color: lighten($primary, 50%);
-  margin-top: 240px;
+  padding-top: 150px;
+  overflow-y: auto;
+  @media (max-width: 767px){
+    margin-top: 235px;
+    height: 100%;
+  }
 }
 .nav-side-menu .brand {
   background-color: #23282e;
